[package]
name = "day-18"
version = "0.1.0"
authors = ["Christopher Serr <christopher.serr@gmail.com>"]

[dependencies]
# cretonne = { git = "https://github.com/stoklund/cretonne" }
# cretonne-frontend = { git = "https://github.com/stoklund/cretonne" }
# cretonne-native = { git = "https://github.com/stoklund/cretonne" }
# cretonne-wasm = { git = "https://github.com/stoklund/cretonne" }
# mmap = "0.1.1"
